Thu Aug 23 11:12:36 2001  George Lebl <jirka@5z.com>

	* libgnomevfs/gnome-vfs-process.c (wake_up), 
	  libgnomevfs-pthread/gnome-vfs-job.c (serve_channel_read)
	  (serve_channel_write):  64bitness issues fixed.  GIOChannel
	  functions have size done in 'gsize' (64bit) and not 'guint' (32bit)

2001-08-21  Maciej Stachowiak  <mjs@noisehavoc.org>

	* OUTSTANDING_API_ISSUES: Removed teh filtering item, added one
	for renaming gnome-vfs-method.

	All changes below: removed the non-working and undesirably directory filtering feature.
	
	* libgnomevfs-pthread/gnome-vfs-async-ops.c:
	(async_load_directory), (pthread_gnome_vfs_async_load_directory),
	(pthread_gnome_vfs_async_load_directory_uri):
	* libgnomevfs-pthread/gnome-vfs-job.c: (gnome_vfs_op_destroy),
	(load_directory_details), (execute_load_directory):
	* libgnomevfs-pthread/gnome-vfs-job.h:
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-async-ops.h:
	* libgnomevfs/gnome-vfs-backend.c:
	(gnome_vfs_async_load_directory_uri),
	(gnome_vfs_async_load_directory):
	* libgnomevfs/gnome-vfs-cancellable-ops.h:
	* libgnomevfs/gnome-vfs-directory-filter.c:
	* libgnomevfs/gnome-vfs-directory-filter.h:
	* libgnomevfs/gnome-vfs-directory.c:
	(gnome_vfs_directory_handle_new), (open_from_uri), (open),
	(gnome_vfs_directory_open), (gnome_vfs_directory_open_from_uri),
	(gnome_vfs_directory_open_from_uri_cancellable),
	(directory_visit_internal), (gnome_vfs_directory_visit_uri),
	(gnome_vfs_directory_visit),
	(gnome_vfs_directory_visit_files_at_uri),
	(gnome_vfs_directory_visit_files), (gnome_vfs_directory_list_load):
	* libgnomevfs/gnome-vfs-directory.h:
	* libgnomevfs/gnome-vfs-method.h:
	* libgnomevfs/gnome-vfs-regexp-filter.c:
	* libgnomevfs/gnome-vfs-regexp-filter.h:
	* libgnomevfs/gnome-vfs-shellpattern-filter.c:
	* libgnomevfs/gnome-vfs-shellpattern-filter.h:
	* libgnomevfs/gnome-vfs-types.h:
	* libgnomevfs/gnome-vfs-xfer.c: (empty_directory),
	(non_recursive_empty_directory), (gnome_vfs_visit_list),